--- a/part4/10_mood.Rmd
+++ b/part4/10_mood.Rmd
@@ -1,12 +1,15 @@
 # (PART) EMA Outcomes {-}
 
+
 # Mood {#mood}
 \index{Mood}
+
 Mood is a common outcome in EMA research [@Myin-Germeys2016; @Desmet2016]. Having respondents rate their mood during the day allows researchers to assess mood fluctuation over time or reactivity to events and daily-stressors [@Wenze2010]. Often, it is studied in relation to depressive symptoms and mood disorders [@AanhetRot2012]. In addition, mood can be linked to other variables, such as substance abuse behaviour [@Kirchner2013; @Serre2015], somatic health [@Engel2016; @Moore2016] or activity patterns [@Dunton2017; @Marszalek2014].
 
 The definition of mood varies across studies. Usually the concept refers to a general affective state such as arousal or valence. Following this line of reasoning, a distinction can be made between mood states (e.g. irritable, cheerful, relaxed, etc.) and discrete emotions (e.g. happy, sad, anxious, etc.), where moods are thought to be less specific and more subjective, enduring and related to context [@Beedie2005; @Cranford2006; @Desmet2016].
 
 Depending on the study focus and research questions, mood measurement can be operationalized in several ways. Therefore, it is vital to consider the goal of measuring mood in your own study and to choose an operationalisation that matches your hypothesis and theoretical framework. In this chapter, we will discuss the most commonly used constructs: 1) unidimensional mood assessment, 2) the Circumplex model, 3) negative and positive affect, and 4) the 'bag of items' approach. 
+
 
 ## Unidimensional mood assessment
 \index{Unidimensional mood assessment}
@@ -16,7 +19,7 @@ Respondents rate these questions on a Likert scale or a Visual Analogue Scale (V
 
 Compared to classic paper-and-pencil methods, digital unidimensional EMA might lead to more accurate data on (in)variability of mood, because retrospective bias is thought to be less of an issue. Further, plotting this data in a graph is an easy way to visually inspect within-subject change in general mood. Combining data from various variables such as activity, sleep and mood in one graph can help respondents understand the interaction between mood and behaviour. 
 
-```{r fig.cap="34 weeks of mood data, from a single participant"}
+```{r fig10a, fig.cap = "34 weeks of mood data, from a single participant"}
 ggplot(csd, aes(x = date, y = as.numeric(mood_irritat))) +
   geom_smooth(method = "loess", span = .05, se = FALSE) + 
   geom_point(size = .5, alpha = .5, position = position_jitter(height = .1)) + 
@@ -34,12 +37,13 @@ Another option is to use bipolar-unidimensional items, which place two opposing 
 
 ## The Circumplex Model
 \index{Circumplex model}
-The Circumplex Model of affect [@russell1980circumplex; @Posner2005] assumes that affective states are a linear combination of two independent underlying constructs, rather than one. Affective states are scored on a valence scale (ranging from unpleasant to pleasant) and an arousal scale (ranging from low to high arousal). Combining these scores places the affective states in a circle on one of four quadrants (\@ref(fig:Circumplex)). States within one quadrant are believed to be positively correlated, while states in the opposing quadrant are thought to be negatively correlated.  
+The Circumplex Model of affect [@russell1980circumplex; @Posner2005] assumes that affective states are a linear combination of two independent underlying constructs, rather than one. Affective states are scored on a valence scale (ranging from unpleasant to pleasant) and an arousal scale (ranging from low to high arousal). Combining these scores places the affective states in a circle on one of four quadrants (\@ref(fig:fig10b)). States within one quadrant are believed to be positively correlated, while states in the opposing quadrant are thought to be negatively correlated.  
 
 
-```{r Circumplex, fig.cap = "The Circumplex model of affect (left) and the The Pick-A-Mood Circumplex Mood Circle (right).", echo = FALSE, out.width = '100%'}
+```{r fig10b, fig.cap = "The Circumplex model of affect (left) and the The Pick-A-Mood Circumplex Mood Circle (right).", echo = FALSE, out.width = '100%'}
 knitr::include_graphics("images/outcomes/Circumplex_Model_with_Pick-A-Mood.png")
 ```
+
 
 ## Negative & Positive Affect
 \index{Negative Affect} \index{Positive Affect}
@@ -48,7 +52,6 @@ Watson and Tellegen (@watson1985) further specified the Circumplex model, arguin
 While bipolar-unidimensional assesment assumes that positive and negative affect are mutually exclusive, the PA/NA affect model assumes that these seemingly opposing mood states can occur simultaneously. 
 
 Watson and Clark [@Watson1997] for example, showed a moderate correlation between the two constructs (.32) and argued that while bipolar scales can be used for within-subject assessment, unipolar scales have suprior convergent and discriminant validity in between-subject data. In @Wichers2016, the interplay between postive (PA) and negative affect (NA) was examined with EMA. Participants were randomly prompted to rate 15 mood items (e.g. ‘satisfied’, ‘hurried’, 'gloomy', etc.) on 7-point Likert scales (paper-and-pencil, 10 assesments per day for 6 days). A principal component analysis with oblique rotation suggested to yield two distinct 'states', matching the theory of PA and NA.
-
 
 
 Ben Zeev overestimation 
@@ -63,7 +66,8 @@ sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
 Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
 ut massa tempor, ac dapibus dui viverra.
 
-```{r fig.cap = "Factor analysis of 7 EMA items, revealing two factors:  Positive Affect (PA) and Negative Affect (NA)."}
+
+```{r fig10c, fig.cap = "Factor analysis of 7 EMA items, revealing two factors:  Positive Affect (PA) and Negative Affect (NA)."}
 items <- csd %>%
   select(c(
     "mood_enthus", "mood_cheerf",
